Revert clean code